--- a/pom.xml
+++ b/pom.xml
@@ -8,13 +8,11 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>AppClima</name>
 
-	<packaging>
-		pom
-	</packaging>
+	<packaging>pom</packaging>
 
 	<modules>
 		<module>core</module>
-		<module> infrastructure</module>
+
 	</modules>
 	<description>Demo project for Spring Boot</description>
 	<properties>
